# CompE

./: .gitignore  CMakeLists.txt
110/final/: final_project.tex
110/final/110_final_project/: 110_final_project.ino  Robot_Pins_v1.h  globals.h  lineSensors.cpp  lineSensors.h  motorControl.cpp  motorControl.h
110/lab2/: KGCOEReport.cls  lab2.gummi  report.tex
110/lab4/: Lab_ohm.cpp  functions.cpp  lab5.c  lab5_condi.c  lab5_preprossesor.c  main.cpp  variables.cpp
110/lab6/: bitlogic.c  bitregister.c
