cmake_minimum_required(VERSION 3.14)
project(lab4)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab4 main.cpp)
add_executable(variables variables.cpp)
add_executable(functions functions.cpp)
add_executable(ohms_law Lab_ohm.cpp)
add_executable(lab5 lab5.c)
add_executable(lab5_prepos lab5_preprossesor.c)
add_executable(lab5_condi lab5_condi.c)