cmake_minimum_required(VERSION 3.14)
project(lab4)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab4 110/lab4/main.cpp)
add_executable(variables 110/lab4/variables.cpp)
add_executable(functions 110/lab4/functions.cpp)
add_executable(ohms_law 110/lab4/Lab_ohm.cpp)
add_executable(lab5 110/lab4/lab5.c)
add_executable(lab5_prepos 110/lab4/lab5_preprossesor.c)
add_executable(lab5_condi 110/lab4/lab5_condi.c)
add_executable(lab6_bitlogic 110/lab6/bitlogic.c)
add_executable(lab6_bitregister 110/lab6/bitregister.c)